--- a/assets/css/theme-color/default.css
+++ b/assets/css/theme-color/default.css
@@ -19,7 +19,7 @@
 .abt-block__slider .owl-dots .owl-dot, .bullet_round:after, .second_righ:after, .bg_color, .bg-color, .prapl_btn:hover,
 .item-nav .item-prev .prev-btn:hover, .item-nav .item-next .next-btn:hover,
 .ui-input-group .input-bar:before, .ui-input-group .input-bar:after, .inner-header-wraper:hover i {
-  background: #ffa500;
+  background: #fc6404;
 }
 
 .bullet_round:before, .second_righ:before {
@@ -56,7 +56,7 @@ a:focus, a:hover, .gallery-heading h4 a:hover, .post-meta span > a > i,
 .white_but, .white_but:hover, .white_but:focus, .widget-tag li a, .item-nav .item-prev .prev-btn, .item-nav .item-next .next-btn,
 .team-item-img .team-item-detail .team-item-detail-inner .social li a:hover, .btn_style:hover, .form-field-wrapper i,
 .ui-input-group > input:focus ~ label, .ui-input-group > textarea:focus ~ label {
-  color: #ffa500;
+  color: #fc6404;
 }
 
 /*
@@ -69,7 +69,7 @@ a:focus, a:hover, .gallery-heading h4 a:hover, .post-meta span > a > i,
 .tparrows.tp-leftarrow:hover, .tparrows.tp-rightarrow:hover, .position_none .btn_style, .arrow_theme .owl-prev:hover, .arrow_theme .owl-next:hover,
 .v-line, .pic-box, .white_but, .box-resume, .prapl_btn, .item-nav .item-prev .prev-btn, .item-nav .item-next .next-btn,
 .appointment-section .input-sm {
-  border-color: #ffa500;
+  border-color: #fc6404;
 }
 
 .timing li {
@@ -77,5 +77,5 @@ a:focus, a:hover, .gallery-heading h4 a:hover, .post-meta span > a > i,
 }
 
 .ui-input-group > input:focus {
-  border-bottom-color: #ffa500;
+  border-bottom-color: #fc6404;
 }
