--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -71,7 +71,7 @@
 	content: '';
 	width: 100%;
 	height: 4px;
-	background:#fc6404;
+	background:white;
 }
 .header ul {
 	float: right;
@@ -92,7 +92,7 @@
 .navigation > ul > li > a {
 	display: block;
 	padding: 43px 16px;
-	color: #222;
+	color: white;
 	transition: all 0.25s ease 0s;
 	-webkit-transition: all 0.25s ease 0s;
 	-moz-transition: all 0.25s ease 0s;
@@ -193,7 +193,7 @@
 		display: none;
 	}
 	.header{
-		background: #fc6404;
+		background: white;
 	}
 	.menu{
 		border-bottom: 4px solid #fff;
